--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "13.13.2",
     "css-loader": "3.5.2",
+    "file-loader": "^6.0.0",
     "sass": "1.26.3",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.4",
