--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "homepage": "https://github.com/Sergey444/asphalt-crm#readme",
   "devDependencies": {
     "@types/node": "13.13.2",
+    "autoprefixer": "9.8.0",
     "css-loader": "3.5.2",
-    "file-loader": "^6.0.0",
+    "file-loader": "6.0.0",
+    "mini-css-extract-plugin": "0.9.0",
+    "perfectionist": "2.4.0",
+    "postcss-loader": "3.0.0",
     "sass": "1.26.3",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.4",
-    "ts-loader": "7.0.1",
     "typescript": "3.8.3",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
